a1/brendan_gordon/TEST_PROGRAMS/invalidtype/luke_emery-fertitta/redeclaration.min
# invalid redeclaration of one variable

var x: int;
var x: float;
